# STM32L031_Firmware

./: README.md
lib/gpio/: CMakeLists.txt
lib/gpio/include/: gpio.h
lib/gpio/src/: gpio.c
lib/platform/: CMakeLists.txt
lib/platform/include/: platform_types.h  std_types.h
lib/platform/src/: platform_types.c
linker/: linker_L031K6.ld
scripts/: build.sh
startup/: startup.c
